# docs

./: .gitmodules  Dockerfile  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: main.yml
.github/workflows/: main.yml
docs/: index.md
docs/contributing/: contributing-guide.md
docs/getting-started/: self-hosting.md  user.md
docs/microservices/: overview.md
