[project]
name = "docs"
version = "0.1.0"
description = "Documentation for the collection of microservices to deploy Enscribe"
authors = [
    {name = "Leon Bass, Joshua Fitzmaurice, Aidan Hall, Asher Harvey-Smith, Lewis Solarin"}
]
readme = "README.md"
requires-python = ">=3.9"
package-mode = false
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-monorepo-plugin (>=1.1.0,<2.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "mkdocs-material (>=9.6.11,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
